# SchroederReverb

./: .clang-format  CMakeLists.txt  README.md  flake.nix
src/: PluginProcessor.cpp  PluginProcessor.h
src/DSP/: AllPassFilter.cpp  AllPassFilter.h  CombFilter.cpp  CombFilter.h  Delay.cpp  Delay.h  SchroederReverb.cpp  SchroederReverb.h
src/UI/: KnobWithLabel.cpp  KnobWithLabel.h  PluginEditor.cpp  PluginEditor.h
